--- a/Changes
+++ b/Changes
@@ -1,5 +1,25 @@
 Revision history for Perl extension Digest::SHA3.
 
+0.12  Sat Apr 19 05:14:50 MST 2014
+	- added universal newlines mode ("U") to addfile and sha3sum
+		-- based on Python Universal Newlines concept
+			-- newlines identical across MacOS, DOS, and UNIX
+		-- will deprecate portable mode ("p") in future
+			-- "U" mode is cleaner and more efficient
+	- enhanced performance
+		-- reduced number of dynamic memory allocations
+		-- sped up addfile method with use of C code
+			-- ref. SHA3.xs (_addfilebin and _addfileuniv)
+	- changed text file test (-T) to act on filehandles
+		-- improves consistency when reading from STDIN
+		-- still must act on filenames for early Perls (< 5.6)
+	- sealed memory leak in SHA3.xs
+		-- arose only with SvPVbyte exceptions during eval
+	- patched inheritence bug (ref: rt.cpan.org #94830)
+		-- use sv_isobject/sv_derived_from instead of sv_isa
+	- added 'allocated' flag to SHA3 structure (ref. src/sha3.h)
+		-- to guard against Perl double frees
+
 0.11  Mon Feb 17 16:42:04 MST 2014
 	- tightened code in SHA3.xs
 		-- added sv_isa checks when invoking methods
