Import of MSHELOR/Digest-SHA3-0.21 from CPAN.
gitpan-cpan-distribution: Digest-SHA3
gitpan-cpan-version:      0.21
gitpan-cpan-path:         MSHELOR/Digest-SHA3-0.21.tar.gz
gitpan-cpan-author:       MSHELOR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Digest::SHA3.
 
+0.21  Fri May 16 10:21:46 MST 2014
+	- restored original 'addfile' for use on opened file handles
+		-- allows callbacks in place of actual files
+			-- ref. IO::Callback (rt.cpan.org #95643)
+	- re-established inheritance from Digest::base
+		-- to pick up future Digest enhancements automatically
+	- cleaned up documentation
+
 0.20  Wed May  7 07:57:10 MST 2014
 	- consolidated all dynamic memory allocation into XSUBs
 		-- streamlines referencing of SHA3 objects
