--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-Digest::SHA3 version 0.22
+Digest::SHA3 version 0.23
 =========================
 
 Digest::SHA3 is a complete implementation of the NIST SHA-3 cryptographic
-hash function, known originally as Keccak.  It gives Perl programmers
-a convenient way to calculate SHA3-224, SHA3-256, SHA3-384, and
-SHA3-512 message digests, as well as variable-length hashes using the
-SHA3-0 variant.  The module can handle all types of input, including
+hash function, known originally as Keccak.  It gives Perl programmers a
+convenient way to calculate SHA3-224, SHA3-256, SHA3-384, and SHA3-512
+message digests, as well as variable-length hashes using SHAKE128
+and SHAKE256.  The module can handle all types of input, including
 partial-byte data.
 
 Digest::SHA3 is written in C for speed.  If your platform lacks a C
@@ -13,10 +13,11 @@ compiler, perhaps you can find the module in a binary form compatible
 with your particular processor and operating system.
 
 The initial version of Digest::SHA3 was written to emphasize simplicity
-and correctness.  It passes all 12805 known-answer-tests for short
-and long messages.  No particular emphasis was placed on performance.
-However, future versions will endeavor to perform on a par with optimized
-portable implementations.
+and correctness.  It passed all known-answer-tests for short and long
+messages.  No particular emphasis was placed on performance.  However,
+as the SHA-3 standard matures and achieves 'final' status, versions of
+this module will endeavor to perform on a par with optimized portable
+implementations.
 
 The module omits all HMAC-SHA-3 functions until such time as official
 test vectors become available.
@@ -39,7 +40,7 @@ DEPENDENCIES
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2012-2014 Mark Shelor
+Copyright (C) 2012-2015 Mark Shelor
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
